Address annotations box overflowing out of page with long annotations issue (#1065)
Tested in meeting today, works fine

--- a/app/assets/stylesheets/annotations.css
+++ b/app/assets/stylesheets/annotations.css
@@ -733,3 +733,7 @@
     opacity: 0;
   }
 }
+.collapsible {
+  max-height: 50vh;
+  overflow: auto;
+}
